--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://objective-bassi-9d4294.netlify.com/"
 baseurl = "/"
 title = "James C. Borders"
 copyright = "&copy; 2019 James C. Borders"
