--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
-# Academic
-version = "4.1.0"
-
 [build]
-publish = "public"
-command = "hugo"
+  publish = "public"
+  command = "hugo"
 
 [context.production.environment]
-HUGO_VERSION = "0.54.0"
-HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
+  HUGO_VERSION = "0.54.0"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+  
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.54.0"
