--- a/themes/hugo-academic/netlify.toml
+++ b/themes/hugo-academic/netlify.toml
@@ -1,12 +1,11 @@
 [build]
-  command = "hugo --themesDir ../../"
-  base    = "exampleSite"
-  publish = "exampleSite/public"
-
-[build.environment]
-  HUGO_THEME = "repo"
-  HUGO_VERSION = "0.54.0"
-  HUGO_ENABLEGITINFO = "true"
+  publish = "public"
+  command = "hugo"
 
 [context.production.environment]
+  HUGO_VERSION = "0.54.0"
   HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+  
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.54.0"
